Fix scroll jumps

--- a/src/assets/scss/fixes/vue-modal.scss
+++ b/src/assets/scss/fixes/vue-modal.scss
@@ -5,3 +5,9 @@
     background: rgba(33, 49, 65, 0.8)!important;
   }
 }
+
+.v--modal-block-scroll {
+  @media screen and (min-width: 992px) {
+    padding-right: 15px;
+  }
+}
